src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwU-dhP0.5-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault column width: U\ndefault window height: P0.5\nwant fullscreen: BU"
expression: snapshot
---
initial configure:
size: 0 × 336, bounds: 1248 × 688, states: []

post-map configures:
size: 1 × 336, bounds: 1248 × 688, states: [Activated]
